# InfraPaC

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  analyze_results.sh  clear-patches.sh  generate_patches.py  generate_patches_kics.py  import_kics_dataset.py  main.py  pyproject.toml  pytest.ini  run_rq2.py  sample_rq2.py  validate_dataset.py
data/: rq2_extended_sample.json  rq2_sample.json
data/datasets/spec_bug_fix/: dataset_index.json
data/datasets/spec_bug_fix_kics/: dataset_index.json
data/datasets/spec_bug_fix_kics_extended/: dataset_index.json
data/scripts/: filter_opa_terraform.py  iac-pac-repos.csv  opa-terraform-repos.csv
examples/: s3_bucket.tf  s3_encryption.rego  s3_no_encryption.tf  s3_versioning.rego
examples/kubernetes_no_resource_limits/: deployment.yaml  policy.rego
examples/pulumi_dynamodb_encryption/: policy.rego  stack.json
results/: .gitkeep
results/spec_bug_fix_kics/codellama/: execution_20260115_summary.md  execution_20260318_summary.md
src/: __init__.py  models.py
src/agents/: __init__.py  repair_agent.py
src/chains/: __init__.py  prompt_builder.py  repair_chain.py
src/config/: __init__.py  default_config.yaml
src/datasets/: __init__.py  dataset_loader.py  models.py
src/pac_engines/: __init__.py  base_engine.py  kics_engine.py  opa_engine.py  sentinel_engine.py
src/utils/: __init__.py  config_loader.py  env_loader.py  llm_validator.py  logging_config.py
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_chains.py  test_llm_validator.py  test_pac_engines.py
(+2379 files in other folders)
