[project]
name = "infrapac"
version = "0.1.0"
description = "Automated Infrastructure as Code Repair via Policy as Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.34",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "colorlog>=6.8.0",
    "python-hcl2>=4.3.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "langchain-core>=0.3.78",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
